# CCTS_FOCC_BOCC

./: BOCC-CTA-cs16btech11038.cpp  BOCC_CTA.h  CMakeLists.txt  DataItem.cpp  DataItem.h  FOCC-CTA-cs16btech11038.cpp  FOCC-OTA-cs16btech11038.cpp  FOCC_CTA.h  FOCC_OTA.h  README.MD  Transaction.cpp  Transaction.h  build.sh  inp-params.txt  opt-test.cpp
